--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@types/react-beautiful-dnd": "^12.1.3",
     "@types/react-dom": "^16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
-    "@types/react-helmet": "^5.0.16",
+    "@types/react-helmet-async": "^1.0.3",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-form": "^8.2.7",
@@ -84,6 +84,7 @@
     "draft-js": "^0.11.6",
     "formik": "^2.1.5",
     "history": "^4.10.1",
+    "html-react-parser": "^1.2.1",
     "immer": "^6.0.9",
     "immutable": "^4.0.0-rc.12",
     "js-cookie": "^2.2.1",
@@ -106,7 +107,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-dropzone": "^10.2.2",
     "react-feather": "^2.0.8",
-    "react-helmet": "^5.2.1",
+    "react-helmet-async": "^1.0.7",
     "react-markdown": "^4.3.1",
     "react-modal-image": "^2.5.0",
     "react-perfect-scrollbar": "^1.5.8",
