--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "clsx": "^1.1.1",
     "draft-js": "^0.11.6",
     "formik": "^2.1.5",
+    "highcharts": "^9.0.1",
+    "highcharts-react-official": "^3.0.0",
     "history": "^4.10.1",
     "html-react-parser": "^1.2.1",
     "immer": "^6.0.9",
@@ -120,6 +122,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^3.1.2",
     "uuid": "^7.0.3",
     "yup": "^0.28.5"
   },
