--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@mdx-js/react": "^1.6.14",
     "@react-pdf/renderer": "^1.6.10",
     "@reduxjs/toolkit": "^1.4.0",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.2",
     "@types/history": "^4.7.7",
     "@types/jest": "^25.2.3",
     "@types/js-cookie": "^2.2.6",
