--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react-helmet-async": "^1.0.7",
     "react-markdown": "^4.3.1",
     "react-modal-image": "^2.5.0",
+    "react-number-format": "^4.6.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
