--- a/package.json
+++ b/package.json
@@ -75,6 +75,15 @@
     "@types/redux-logger": "^3.0.8",
     "@types/uuid": "^7.0.4",
     "@types/yup": "^0.28.3",
+    "@visx/event": "^2.1.2",
+    "@visx/gradient": "^2.1.0",
+    "@visx/grid": "^2.2.2",
+    "@visx/group": "^2.1.0",
+    "@visx/mock-data": "^2.1.2",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.2.2",
+    "@visx/text": "^2.3.0",
+    "@visx/tooltip": "^2.2.2",
     "apexcharts": "^3.19.3",
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.18.2",
